--- a/web/manifest.json
+++ b/web/manifest.json
@@ -3,8 +3,8 @@
      "short_name": "AnymeX β",
      "start_url": ".",
      "display": "standalone",
-     "background_color": "#00000",
-     "theme_color": "#FFFFFF",
+     "background_color": "#0175C2",
+     "theme_color": "#0175C2",
      "description": "A new Flutter project.",
      "orientation": "portrait-primary",
      "prefer_related_applications": false,
