--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.anime" "\0"
+            VALUE "CompanyName", "com.example" "\0"
             VALUE "FileDescription", "anymex" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "AnymeX" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2024 com.anime. All rights reserved." "\0"
+            VALUE "InternalName", "anymex" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
             VALUE "OriginalFilename", "anymex.exe" "\0"
-            VALUE "ProductName", "AnymeX" "\0"
+            VALUE "ProductName", "anymex" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
