--- a/.github/workflows/bug_greetings.yml
+++ b/.github/workflows/bug_greetings.yml
@@ -17,12 +17,9 @@ jobs:
       run: |
         ISSUE_NUMBER=$(jq -r '.issue.number' "$GITHUB_EVENT_PATH")
         LABELS=$(gh issue view $ISSUE_NUMBER --json labels --jq '.labels[].name')
-        
         if echo "$LABELS" | grep -q 'bug'; then
-          echo "This issue is labeled as a bug report. Checking if the issue creator is the repository owner."
           echo "skip_label_check=false" >> $GITHUB_ENV
         else
-          echo "This issue is not labeled as a bug report. Skipping greeting message."
           echo "skip_label_check=true" >> $GITHUB_ENV
         fi
     - name: Check if the issue creator is the repo owner
@@ -32,10 +29,8 @@ jobs:
         ISSUE_AUTHOR=$(jq -r '.issue.user.login' "$GITHUB_EVENT_PATH")
         REPO_OWNER=$(jq -r '.repository.owner.login' "$GITHUB_EVENT_PATH")
         if [ "$ISSUE_AUTHOR" = "$REPO_OWNER" ]; then
-          echo "The issue creator is the repository owner. Skipping greeting message."
           echo "skip=true" >> $GITHUB_ENV
         else
-          echo "The issue creator is not the repository owner. Checking for previous bug reports..."
           echo "skip=false" >> $GITHUB_ENV
         fi
     - name: Check if the user has submitted a bug report before
@@ -46,39 +41,53 @@ jobs:
       run: |
         ISSUE_AUTHOR=$(jq -r '.issue.user.login' "$GITHUB_EVENT_PATH")
         ISSUE_NUMBER=$(jq -r '.issue.number' "$GITHUB_EVENT_PATH")
-        
-        # Get all issues (both open and closed) by the author except the current one
         PREVIOUS_REPORTS=$(gh issue list --author "$ISSUE_AUTHOR" --label "Bug" --state all --json number --jq '. | map(select(.number != '$ISSUE_NUMBER')) | length')
-        echo "User $ISSUE_AUTHOR has submitted $PREVIOUS_REPORTS bug report(s) previously"
-        
         if [ "$PREVIOUS_REPORTS" -eq 0 ]; then
-          echo "This is the user's first bug report. Sending greeting message."
           echo "skip_first_report=false" >> $GITHUB_ENV
         else
-          echo "User has previous bug reports. Skipping greeting message."
           echo "skip_first_report=true" >> $GITHUB_ENV
         fi
-    - name: Send Greeting Message
+    - name: Check for Extension Checkbox
       if: env.skip_label_check == 'false' && env.skip != 'true' && env.skip_first_report != 'true'
       uses: actions/github-script@v6
       with:
         script: |
-          const issueNumber = context.payload.issue.number;
-          const message = `
-          **🛠️ Thank you for reporting a bug!**  
-          Your issue has been successfully submitted and is now awaiting review. We appreciate your help in making AnymeX better.
-          **🔍 What Happens Next**  
-          - Our team will investigate the issue and provide updates as soon as possible.  
-          - You may be asked for additional details or clarification if needed.  
-          - Once resolved, we'll notify you of the fix or provide a workaround.
-          **👥 Connect with Us**  
-          - **[Discord](https://discord.com/invite/azAMuBWd8C)**: Engage with our community and ask questions.  
-          - **[Telegram](https://t.me/AnymeX_Discussion)**: Reach out for real-time discussions and updates.
-          We're working hard to resolve the issue and appreciate your patience!
-          `;
-          await github.rest.issues.createComment({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            issue_number: issueNumber,
-            body: message
-          });
+          const issueBody = context.payload.issue.body || '';
+          const extensionCheckboxPattern = /- \[[xX]\]\s*If this is an issue with an extension, I should be opening an issue in the extension's repository\./;
+          if (extensionCheckboxPattern.test(issueBody)) {
+            await github.rest.issues.createComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.payload.issue.number,
+              body: "If this is an issue with an extension, please open an issue in the extension's repository."
+            });
+            await github.rest.issues.update({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.payload.issue.number,
+              state: "closed",
+              state_reason: "not_planned"
+            });
+          } else {
+            const issueNumber = context.payload.issue.number;
+            const message = `
+            **🛠️ Thank you for reporting a bug!**  
+            Your issue has been successfully submitted and is now awaiting review. We appreciate your help in making AnymeX better.
+            **🔍 What Happens Next**  
+            - Our team will investigate the issue and provide updates as soon as possible.  
+            - You may be asked for additional details or clarification if needed.  
+            - Once resolved, we'll notify you of the fix or provide a workaround.
+            **👥 Connect with Us**  
+            - **[Discord](https://discord.com/invite/azAMuBWd8C)**: Engage with our community and ask questions.  
+            - **[Telegram](https://t.me/AnymeX_Discussion)**: Reach out for real-time discussions and updates.
+            We're working hard to resolve the issue and appreciate your patience!
+            `;
+            await github.rest.issues.createComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: issueNumber,
+              body: message
+            });
+          }
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
